# Violet.Networking

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  default.nix  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix  taplo.toml
.github/actions/setup-macos/: action.yml
.github/workflows/: CI.yaml  Linux.yaml  Release.yaml  macOS.yaml
bazel/: BUILD.bazel  cc.bzl  flags.bzl  version.bzl
bazel/cc/: defs.bzl
bazel/flags/: BUILD.bazel
examples/url/capi/: BUILD.bazel  main.c
examples/url/cpp/: BUILD.bazel  main.cc
hack/nix/: devshell.sh
hack/tooling/: rust-project.sh
include/violet-c/net/: ipv4.h  ipv6.h  socketaddr.h  url.h
include/violet/Networking/: IP.h  IPAddress.h  SocketAddr.h  SocketAddress.h  URL.h
include/violet/Networking/HTTP/: Body.h  Client.h  Error.h  Headers.h  Interceptor.h  Request.h  Response.h  Transport.h
include/violet/Networking/HTTP/Interceptors/: Logrin.h
include/violet/Networking/HTTP/cURL/: Global.h
include/violet/Networking/IP/: AddrV4.h  AddrV6.h  BUILD.bazel
include/violet/Networking/Runtime/: Info.h
include/violet/Networking/Socket/: AddrV4.h  AddrV6.h
net/: BUILD.bazel
net/ip/: BUILD.bazel
net/socket/: BUILD.bazel
nix/: default.nix  devshell.nix
rust/: Cargo.toml  README.md
rust/url/: BUILD.bazel  Cargo.toml  lib.rs
src/: BUILD.bazel  IPAddress.cc  SocketAddress.cc  Url.cc
src/http/: BUILD.bazel  Body.cc
src/http/curl/: BUILD.bazel  Global.cc
src/http/interceptors/: BUILD.bazel
src/ip/: AddrV4.cc  AddrV6.cc  BUILD.bazel
src/socket/: AddrV4.cc  AddrV6.cc  BUILD.bazel
tests/: BUILD.bazel  IPAddress.test.cc  SocketAddress.test.cc  Url.test.cc
tests/http/: BUILD.bazel  Body.test.cc  Headers.test.cc
tests/ip/: AddrV4.test.cc  AddrV6.test.cc  BUILD.bazel
tests/socket/: AddrV4.test.cc  AddrV6.test.cc  BUILD.bazel
tools/: bazeldist  hotpatch-release.py
