# 🌺💜 Violet.Networking: C++20 library that provides networking primitives
# Copyright (c) 2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "violet_cc_library")

exports_files(glob(["*.cc"]))

violet_cc_library(
    name = "runtime_info",
    hdrs = ["//include/violet/Networking/Runtime:Info.h"],
    deprecation = "As of 26.06, all targets have moved to `@violet.net//net`, e.g., `@violet.net//net:runtime_info`. This will be removed in a 26.08 release.",
    visibility = ["//visibility:public"],
    deps = ["@violet//violet:policy_checks"],
)

violet_cc_library(
    name = "url_c",
    hdrs = ["//include/violet-c/net:url.h"],
    deprecation = "As of 26.06, all targets have moved to `@violet.net//net`, e.g., `@violet.net//net:url_c`. This will be removed in a 26.08 release.",
    visibility = ["//visibility:public"],
    deps = ["//rust/url"],
)

violet_cc_library(
    name = "url",
    srcs = ["Url.cc"],
    hdrs = ["//include/violet/Networking:URL.h"],
    deprecation = "As of 26.06, all targets have moved to `@violet.net//net`, e.g., `@violet.net//net:url`. This will be removed in a 26.08 release.",
    visibility = ["//visibility:public"],
    deps = [
        ":url_c",
        "@violet//violet",
        "@violet//violet/container",
    ],
)

violet_cc_library(
    name = "ip_address",
    srcs = ["IPAddress.cc"],
    hdrs = ["//include/violet/Networking:IPAddress.h"],
    deprecation = "As of 26.06, all targets have moved to `@violet.net//net`, e.g., `@violet.net//net:ip_address`. This will be removed in a 26.08 release.",
    visibility = ["//visibility:public"],
    deps = [
        "//src/ip:addr_v4",
        "//src/ip:addr_v6",
        "@violet//violet",
        "@violet//violet/experimental:oneof",
    ],
)

violet_cc_library(
    name = "socket_address",
    srcs = ["SocketAddress.cc"],
    hdrs = ["//include/violet/Networking:SocketAddress.h"],
    deprecation = "As of 26.06, all targets have moved to `@violet.net//net`, e.g., `@violet.net//net:socket_address`. This will be removed in a 26.08 release.",
    visibility = ["//visibility:public"],
    deps = [
        "//src/socket:addr_v4",
        "//src/socket:addr_v6",
        "@violet//violet",
        "@violet//violet/experimental:oneof",
    ],
)
