# 🌺💜 Violet.Networking: C++20 library that provides networking primitives
# Copyright (c) 2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//bazel:flags.bzl", "BOOL_FLAGS", "STRING_FLAGS")

[string_flag(
    name = name,
    build_setting_default = values[0],
    values = values,
    visibility = ["//visibility:public"],
) for (name, values) in STRING_FLAGS.items()]

[config_setting(
    name = "%s_%s" % (
        flag,
        value.lower(),
    ),
    flag_values = {
        ("//bazel/flags:%s" % flag): value,
    },
    visibility = ["//:__subpackages__"],
) for flag, values in STRING_FLAGS.items() for value in values]

[bool_flag(
    name = flag,
    build_setting_default = False,
    visibility = ["//visibility:public"],
) for flag in BOOL_FLAGS]

[config_setting(
    name = "%s_enabled" % flag,
    flag_values = {
        ("//bazel/flags:%s" % flag): "True",
    },
) for flag in BOOL_FLAGS]
