# 🌺💜 Violet.Networking: C++20 library that provides networking primitives
# Copyright (c) 2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "body",
    srcs = ["Body.cc"],
    hdrs = ["//include/violet/Networking/HTTP:Body.h"],
    deps = [
        "@violet//violet",
        "@violet//violet/experimental:oneof",
    ],
)

cc_library(
    name = "client",
    srcs = ["Client.cc"],
    hdrs = ["//include/violet/Networking/HTTP:Client.h"],
    deps = [
        ":transport",
        "@violet//violet",
    ],
)

cc_library(
    name = "error",
    srcs = ["Error.cc"],
    hdrs = ["//include/violet/Networking/HTTP:Error.h"],
    deps = [
        ":headers",
        "//src:url",
        "@violet//violet",
        "@violet//violet/experimental:oneof",
        "@violet//violet/support:demangle",
    ],
)

cc_library(
    name = "headers",
    hdrs = ["//include/violet/Networking/HTTP:Headers.h"],
    deps = [
        "@violet//violet:iterator",
        "@violet//violet/container:optional",
        "@violet//violet/container:result",
    ] + select({
        "//bazel/flags:http_client_transport_curl": ["@curl"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "interceptor",
    hdrs = ["//include/violet/Networking/HTTP:Interceptor.h"],
    deps = [
        "@violet//violet",
    ],
)

cc_library(
    name = "request",
    srcs = select({
        "//bazel/flags:http_client_transport_curl": ["//src/http/curl:Request.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["//include/violet/Networking/HTTP:Request.h"],
    deps = [
        "@violet//violet",
    ] + select({
        "//bazel/flags:http_client_transport_curl": ["@curl"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "response",
    srcs = select({
        "//bazel/flags:http_client_transport_curl": ["//src/http/curl:Response.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["//include/violet/Networking/HTTP:Response.h"],
    deps = [
        "@violet//violet",
    ] + select({
        "//bazel/flags:http_client_transport_curl": ["@curl"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "transport",
    hdrs = ["//include/violet/Networking/HTTP:Transport.h"],
    deps = [
        ":error",
        "@violet//violet",
    ],
)
